{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 68,
  "lineage": "309f0636-a0cf-f084-1279-12cc9c626268",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476488972684:route-table/rtb-021c1141804be26d4",
            "id": "rtb-021c1141804be26d4",
            "owner_id": "476488972684",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "hello-protocol-dev-rtb-private",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-protocol-dev-rtb-private",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf04b18dabf6bbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2ee34772f9a8799",
            "route_table_id": "rtb-021c1141804be26d4",
            "subnet_id": "subnet-0bd1e8c126ce23d27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08aaae0fe1cc37866",
            "route_table_id": "rtb-021c1141804be26d4",
            "subnet_id": "subnet-0fbfa51e9985e7e4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476488972684:security-group/sg-06f2a042919501988",
            "description": "DocDB cluster SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f2a042919501988",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Mongo from Lambda",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00244c4a144e662dd"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "hello-protocol-dev-docdb-sg",
            "name_prefix": "",
            "owner_id": "476488972684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf04b18dabf6bbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476488972684:security-group/sg-00244c4a144e662dd",
            "description": "Lambda security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00244c4a144e662dd",
            "ingress": [],
            "name": "hello-protocol-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "476488972684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf04b18dabf6bbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476488972684:security-group/sg-0c11372d370fec7c3",
            "description": "Allow HTTPS from VPC to VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c11372d370fec7c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hello-protocol-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "476488972684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf04b18dabf6bbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476488972684:subnet/subnet-0bd1e8c126ce23d27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd1e8c126ce23d27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476488972684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "hello-protocol-dev-private-a",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-protocol-dev-private-a",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf04b18dabf6bbe9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476488972684:subnet/subnet-0fbfa51e9985e7e4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbfa51e9985e7e4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476488972684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "hello-protocol-dev-private-b",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-protocol-dev-private-b",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf04b18dabf6bbe9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476488972684:vpc/vpc-0cf04b18dabf6bbe9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b486892dfa38139a",
            "default_route_table_id": "rtb-0e11909ca3d2374aa",
            "default_security_group_id": "sg-0a90e7f45d8eb69e4",
            "dhcp_options_id": "dopt-03e9d8faf789866dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf04b18dabf6bbe9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e11909ca3d2374aa",
            "owner_id": "476488972684",
            "tags": {
              "Environment": "dev",
              "Name": "hello-protocol-dev-vpc",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hello-protocol-dev-vpc",
              "Project": "hello-protocol",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476488972684:vpc-endpoint/vpce-08c2b4c5cc1480b81",
            "dns_entry": [
              {
                "dns_name": "vpce-08c2b4c5cc1480b81-noqrunyv.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08c2b4c5cc1480b81-noqrunyv-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08c2b4c5cc1480b81-noqrunyv-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03509303G5IOTXAHCLL2"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08c2b4c5cc1480b81",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bb8273ff3d8cfce4",
              "eni-0fb119baeaddc069a"
            ],
            "owner_id": "476488972684",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c11372d370fec7c3"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.1.201",
                "subnet_id": "subnet-0bd1e8c126ce23d27"
              },
              {
                "ipv4": "10.20.2.119",
                "subnet_id": "subnet-0fbfa51e9985e7e4a"
              }
            ],
            "subnet_ids": [
              "subnet-0bd1e8c126ce23d27",
              "subnet-0fbfa51e9985e7e4a"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "hello-protocol",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cf04b18dabf6bbe9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpce_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}